--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
 
-    <application
+    <application>
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -24,6 +24,10 @@
         </activity>
         <activity
             android:name=".MenuActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".ContactActivity"
             android:label="@string/app_name" >
         </activity>
     </application>
