--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name=".ContactActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".AboutActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
