--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </activity>
         <activity
             android:name=".MenuActivity"
-            android:label="@string/app_name" >
+            android:label="@string/menu_label" >
         </activity>
         <activity
             android:name=".ContactActivity"
@@ -32,7 +32,7 @@
         </activity>
         <activity
             android:name=".AboutActivity"
-            android:label="@string/app_name" >
+            android:label="@string/about_label" >
         </activity>
     </application>
 
