--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -34,6 +34,11 @@
             android:name=".AboutActivity"
             android:label="@string/about_label" >
         </activity>
+        <activity
+            android:name=".DirectionsActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
     </application>
 
 </manifest>
