--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -44,6 +44,21 @@
             android:name=".DirectionsActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".CheckoutActivity"
+            android:label="@string/checkout_label" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MenuActivity" />
+        </activity>
+        <activity
+            android:name=".DeliveryActivity"
+            android:label="@string/delivery_label" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".CheckoutActivity" />
+        </activity>
+        
     </application>
 
 </manifest>
