--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application>
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -58,7 +60,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".CheckoutActivity" />
         </activity>
-        
     </application>
 
 </manifest>
