--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:icon="@drawable/papa_icon">
+    <application android:icon="@drawable/dominos_icon">
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
