--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -72,6 +72,11 @@
             android:label="@string/app_name"
             android:theme="@style/CustomTheme">
         </activity>
+        <activity
+            android:name=".OrderErrorActivity"
+            android:label="@string/app_name"
+            android:theme="@style/CustomTheme">
+        </activity>
     </application>
 
 </manifest>
